--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <title>Calculator App</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-    
+    <div id="calculator">
+        <input id="display" readonly>
+        <div id="key">
+            <button onclick="appen('7')">7</button>
+            <button onclick="appen('8')">8</button>
+            <button onclick="appen('9')">9</button>
+            <button onclick="appen('+')" class="poerater-btn">+</button>
+            <button onclick="appen('4')">4</button>
+            <button onclick="appen('5')">5</button>
+            <button onclick="appen('6')">6</button>
+            <button onclick="appen('-')" class="poerater-btn">-</button>
+            <button onclick="appen('1')">1</button>
+            <button onclick="appen('2')">2</button>
+            <button onclick="appen('3')">3</button>
+            <button onclick="appen('/')" class="poerater-btn">/</button>
+            <button onclick="appen('00')" >00</button>
+            <button onclick="appen('0')">0</button>
+            <button onclick="Solve(100)">%</button>
+
+            <button onclick="appen('.')" class="poerater-btn">.</button>
+            <button onclick="calculate()" class="poerater-btn">=</button>
+            <button onclick="appen('*')" class="poerater-btn">*</button>
+            <button onclick="Delete()" class="poerater-btn">C</button>
+            <button onclick="Back()" class="poerater-btn">←</button>
+
+        </div>
+
+    </div>
+    <script src="index.js"></script>
 </body>
+
 </html>
