--- a/index.html
+++ b/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Responsive Web Calculator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="calcContainer">
+        <div class="display">
+            <h1 id="inputValue">0</h1>
+        </div>
+        <div class="btnsContainer">
+            <div class="btnRow">
+                <button onclick="handleInput('(')" class="btn">(</button>
+                <button onclick="handleInput(')')" class="btn">)</button>
+                <button onclick="handleInput('%')" class="btn">%</button>
+                <button onclick="handleReset()" class="btn">AC</button>
+            </div>
+            <div class="btnRow">
+                <button onclick="handleInput('7')" class="btn">7</button>
+                <button onclick="handleInput('8')" class="btn">8</button>
+                <button onclick="handleInput('9')" class="btn">9</button>
+                <button onclick="handleInput('/')" class="btn">/</button>
+            </div>
+            <div class="btnRow">
+                <button onclick="handleInput('4')" class="btn">4</button>
+                <button onclick="handleInput('5')" class="btn">5</button>
+                <button onclick="handleInput('6')" class="btn">6</button>
+                <button onclick="handleInput('*')" class="btn">*</button>
+            </div>
+            <div class="btnRow">
+                <button onclick="handleInput('1')" class="btn">1</button>
+                <button onclick="handleInput('2')" class="btn">2</button>
+                <button onclick="handleInput('3')" class="btn">3</button>
+                <button onclick="handleInput('-')" class="btn">-</button>
+            </div>
+            <div class="btnRow">
+                <button onclick="handleInput('0')" class="btn">0</button>
+                <button onclick="handleInput('.')" class="btn">.</button>
+                <button onclick="handleEvaluate()" class="btn">=</button>
+                <button onclick="handleInput('+')" class="btn">+</button>
+            </div>
+        </div>
+    </section>
+    <script src="index.js"></script>
 </body>
 </html>
